--- a/JS_print.html
+++ b/JS_print.html
@@ -14,6 +14,7 @@
     </script>
 </head>
 <body>
+Print the contents of this window!
     <form id="myForm">
         <input id="myButton" type="button" value="Click me, to print this window!" />
     </form>
