--- a/JS_rotatestring.html
+++ b/JS_rotatestring.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <title>Javascript: Rotate String</title>
     <script src="scripts.js"></script>
-    <script></script>
+    <script>
+        window.onload = setRotateButton;
+    </script>
 </head>
 <body>
-
+<form id="formStringToRotate">
+    Enter a string here: <br/>
+    <input id="textStringToRotate" type="text" value="w3cresources"/>
+    <input id="buttonRotate" type="button" value="Rotate it!"/><br/>
+    <input id="textRotatedString" type="text" value="rotated text here"/>
+</form>
 </body>
 </html>
